# opengamebox2-cpp

./: .gitignore  CMakeLists.txt
src/: entity.cpp  entity.h  interface.cpp  interface.h  main.cpp  main.h  player.h  renderer.cpp  renderer.h  vector2.cpp  vector2.h  widget.cpp  widget.h
src/interfaces/: game.cpp  game.h  menu.cpp  menu.h
src/widgets/: button.cpp  button.h  label.cpp  label.h  panel.cpp  panel.h  textbox.cpp  textbox.h
